k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kastro-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /about
        pathType: Prefix
        backend:
          service:
            name: about-service
            port:
              number: 80
      - path: /contact
        pathType: Prefix
        backend:
          service:
            name: contact-service
            port:
              number: 80
      - path: /services
        pathType: Prefix
        backend:
          service:
            name: services-service
            port:
              number: 80
